src/objects/Job__c.object
<CustomObject>
    <description>Job</description>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Admin Support</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data Science &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Creativeselected</fullName>
                </value>
                <value>
                    <fullName>Engineering &amp; Architecture</fullName>
                </value>
                <value>
                    <fullName>IT &amp; Networking</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Web, Mobile &amp; Software Dev</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 to 6 months</fullName>
                </value>
                <value>
                    <fullName>1 to 3 months</fullName>
                </value>
                <value>
                    <fullName>Less than 1 month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FreelancerExperienceLevel__c</fullName>
        <label>FreelancerExperienceLevel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HourlyRate__c</fullName>
        <label>HourlyRate</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adobe Acrobat</fullName>
                </value>
                <value>
                    <fullName>Adobe After Effects</fullName>
                </value>
                <value>
                    <fullName>Adobe Illustrator</fullName>
                </value>
                <value>
                    <fullName>Adobe InDesign</fullName>
                </value>
                <value>
                    <fullName>Adobe Photoshop</fullName>
                </value>
                <value>
                    <fullName>Adobe XD</fullName>
                </value>
                <value>
                    <fullName>Advertising Design</fullName>
                </value>
                <value>
                    <fullName>Affinity Designer</fullName>
                </value>
                <value>
                    <fullName>Art Deco</fullName>
                </value>
                <value>
                    <fullName>Banner Ad Design</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Brand Identity &amp; Guidelines</fullName>
                </value>
                <value>
                    <fullName>Brand Identity Design</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Business Card</fullName>
                </value>
                <value>
                    <fullName>Canva</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Merchandise Design</fullName>
                </value>
                <value>
                    <fullName>Comparison Infographic</fullName>
                </value>
                <value>
                    <fullName>Contemporary</fullName>
                </value>
                <value>
                    <fullName>Content Writing</fullName>
                </value>
                <value>
                    <fullName>Cover Art Design</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Data Visualization</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>Editorial Design</fullName>
                </value>
                <value>
                    <fullName>Email Communication</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Figma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>